# cavity-dipoles

./: .gitignore  README.md  pull-euler.sh  push-config.sh  pyproject.toml
euler/: README.md  array.sbatch  run.sbatch  submit.sh  sweep.sbatch
src/: aggregate.py  analytic.py  compare.py  extrapolate.py  gen_config.py  main.py  make_figures.py  plots.py
src/cavity_benchmark/: benchmark.py  gen_config.py  make_figures.py  sphere.py
src/cavity_benchmark/plot/: common.py  convergence.py  field.py  field_lic.py  ksweep.py  noise.py  operator.py  pareto.py
src/cavity_benchmark/results/: aggregate.py  uq.py
src/cavity_dipoles/: __init__.py  analytic.py  benchmark.py  gen_config.py  make_figures.py  sphere.py
src/cavity_dipoles/epgp/: convergence.py  operators.py  resonance.py  sweep.py
src/cavity_dipoles/plot/: common.py  convergence.py  field.py  field_lic.py
src/cavity_dipoles/results/: aggregate.py  compare.py  extrapolate.py
src/plot/: common.py  convergence.py  field.py  field_lic.py
