[project]
name = "cavity-benchmark"
version = "0.1.0"
description = "Cross-validation harness for the cavity reaction-operator benchmark (EP-GP vs BEM, vs analytic sphere)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "matplotlib>=3.10.7",
    "scipy>=1.14",
    "cavity-epgp",
]

[project.scripts]
gen-config = "cavity_benchmark.gen_config:main"
aggregate = "cavity_benchmark.results.aggregate:main"
make-figures = "cavity_benchmark.make_figures:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
# https so a fresh clone resolves without a GitHub SSH key. For local development
# against a sibling checkout, override with: cavity-epgp = { path = "../cavity-epgp", editable = true }
cavity-epgp = { git = "https://github.com/luiswirth/cavity-epgp.git", branch = "main" }
